# fastapi-test

./: README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: products.py
app/core/: config.py
app/db/: models.py
