[project]
name = "fastapi-test"
version = "0.1.0"
description = "A FastAPI test project with authentication and products"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "tortoise-orm>=0.25.1",
]

[tool.uvicorn]
app = "app.main:app"
host = "127.0.0.1"
port = 8000
reload = true
